--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -37,65 +37,75 @@
             To begin participating, click on the "All activities" tab, and select an activity you'd like to perform.
             Available activities will be marked with an exclamation point: <i class='icon-exclamation-sign'></i>
             </p>
-            <h3>Available activities for {{request.user.participant}}</h3>
-            <ul data-bind='foreach: availableActivities()'>
-                <li data-bind='text: display_name'></li>
-            </ul>
+            <div data-bind='if: hasAvailableActivities()'>
+                <h3>Available activities for {{request.user.participant}}</h3>
+                <ul data-bind='foreach: availableActivities()'>
+                    <li data-bind='text: display_name'></li>
+                </ul>
+            </div>
+            <div data-bind='ifnot: hasAvailableActivities()'>
+                <div class='alert alert-error'>
+                    <i class='icon-info-sign'></i>
+                    There are no available activities at this time.  Please try again later.
+                </div>
+            </div>
         </div>
         <div class='tab-pane' id='all-activities'>
             <p>
             Activities are divided up into 3 levels.  In order to unlock higher level activities your group must earn
             enough points so that the <strong>average number of points</strong> per participant is greater than
-            <span data-bind='text:pointsToNextLevel' class='badge badge-info'>{{points_to_next_level}}</span>.
+            <span data-bind='text:pointsToNextLevel' class='badge badge-info'></span>.
             </p>
             <p>
             Currently available activities are marked with a <i class='icon-exclamation-sign'></i>.  You can click on
             any activity's name to learn more information about it.
             </p>
             {% comment %} FIXME: rewrite this to use KO instead of django templating if possible {% endcomment %}
-            {% regroup all_activities by level as activities_by_level %}
-            {% for activity_group in activities_by_level %}
-            <div class='accordion' id='accordion-level{{activity_group.grouper}}'>
-                <h4>Level {{activity_grsup.grouper}} Activities</h4>
-                {% for activity in activity_group.list %}
-                <div class='accordion-group alert alert-message'>
-                    <div class='accordion-heading'>
-                        <a class='accordion-toggle' data-toggle='collapse' data-parent='#accordion-level{{activity_group.grouper}}'
-                            href='#activity{{activity.pk}}'>{{activity.display_name}} <i class='icon-chevron-right'></i><span class='pull-right text-info'>
-                                {% if activity.available_now %}
-                                <i id='activity-available-sign-{{activity.pk}}' class='icon-exclamation-sign'></i>
-                                {%endif%}
-                                {{activity.time_slots}}</span>
-                        </a>
-                    </div>
-                    <div id='activity{{activity.pk}}' class='accordion-body collapse'>
-                        <div class='accordion-inner'>
-                            <table class='table table-condensed table-bordered table-striped'>
-                                <thead>
-                                    <tr><th>Summary</th><th>Availability</th><th>Points</th></tr>
-                                </thead>
-                                <tbody>
-                                <tr><td>{{ activity.summary }}</td><td><span class='text-info'>{{activity.time_slots}}</span></td><td><span class='badge badge-success'>{{activity.points}}</span></td></tr>
-                            </table>
-                            <p>{{ activity.description }}</p>
-                            <p>For more info, please visit <a target="_blank" href='{{activity.url}}'>{{activity.url}}</a></p>
-                            {% if not activity.available_now %}
-                            <div class='alert alert-error'>
-                                <i class='icon-warning-sign'></i>This activity is not available right now.  Please check again later.
+            <div data-bind='foreach: activitiesByLevel'>
+                <div class='accordion' data-bind='attr: {id: "accordion-level" + $index()}'>
+                    <h4>Level <span data-bind='text: $index() + 1'></span> Activities</h4>
+                    <div data-bind='foreach: $data'>
+                        <div class='accordion-group alert alert-message'>
+                            <div class='accordion-heading'>
+                                <a class='accordion-toggle' data-toggle='collapse'
+                                    data-bind='attr: {"data-parent": "#accordion-level" + $parentContext.$index(), href: "#activity" + pk()}'><i class='icon-chevron-right'></i>
+                                    <span data-bind='text: display_name'></span>
+                                    <span class='pull-right text-info'>
+                                        <span data-bind='if: available_now'>
+                                            <i class='icon-exclamation-sign'></i>
+                                        </span>
+                                        <span data-bind='text: time_slots'></span>
+                                    </span>
+                                </a>
                             </div>
-                            {% endif %}
-                            <form class='form-horizontal' method='post' id='activityform{{activity.pk}}'>
-                                <input type='hidden' name='activity_id' value='{{activity.pk}}' />
-                                <input type='hidden' name='participant_group_id' value='{{participant_group_relationship.pk}}' />
-                                <a data-activity-id='{{activity.pk}}' class='btn activity-action {% if not activity.available_now %} disabled {% endif %}' 
-                                    href='#'><i class='{% if activity.available_now %} icon-ok {% else %} icon-remove {% endif %}'></i> <span class='text-success'> Perform this activity</span></a>
-                            </form>
+                            <div data-bind='attr: {id: "activity" + pk()}' id='activity{{activity.pk}}' class='accordion-body collapse'>
+                                <div class='accordion-inner'>
+                                    <table class='table table-condensed table-bordered table-striped'>
+                                        <thead>
+                                            <tr><th>Summary</th><th>Availability</th><th>Points</th></tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr><td data-bind='text: summary'></td><td><span data-bind='text: time_slots' class='text-info'></span></td><td><span data-bind='text: points' class='badge badge-success'></span></td></tr>
+                                    </table>
+                                    <p data-bind='text: description'></p>
+                                    <p>For more info, please visit <a data-bind='text: url, attr: { href: url }' target="_blank"></a></p>
+                                    <div data-bind='ifnot: available_now'>
+                                        <div class='alert alert-error'>
+                                            <i class='icon-warning-sign'></i>This activity is not available right now.  Please check again later.
+                                        </div>
+                                    </div>
+                                    <form data-bind='attr: { id: "activityform" + pk() }' class='form-horizontal' method='post' id='activityform{{activity.pk}}'>
+                                        <input data-bind='value: pk' type='hidden' name='activity_id' />
+                                        <input type='hidden' name='participant_group_id' value='{{participant_group_relationship.pk}}' />
+                                        <a data-bind='click: $root.performActivity' class='btn activity-action'
+                                            href='#'><span class='text-success'> Perform this activity</span></a>
+                                    </form>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                {% endfor %}
             </div>
-            {% endfor %}
         </div>
         <div class='tab-pane' id='group-score'>
             <h3>Group Score Summary</h3>
@@ -181,6 +191,22 @@
         </div>
     </div>
 </div>
+<div id='activityUnavailableModal' class='modal hide fade' tabindex='-1' role=dialog'
+    aria-labelledby='activityUnavailableModalLabel'
+    aria-hidden='true'>
+    <div class='modal-header'>
+        <button type='button' class='close' data-dismiss='modal' aria-hidden='true'>x</button>
+        <h3 id='activityUnavailableModalLabel'>Unable to perform activity</h3>
+    </div>
+    <div class='modal-body'>
+        <div class='alert alert-error'>
+        <span class='text-error' data-bind='text:errorMessage'></span>
+        </div>
+    </div>
+    <div class='modal-footer'>
+        <button class='btn' data-dismiss='modal' aria-hidden='true'>Continue</button>
+    </div>
+</div>
 <div id='activityPerformedModal' class='modal hide fade' tabindex='-1' role='dialog'
     aria-labelledby='activityPerformedModalLabel'
     aria-hidden='true'>
@@ -190,10 +216,12 @@
     </div>
     <div class='modal-body'>
         <p>
-        You have successfully performed <span class='text-success' data-bind='text:lastPerformedActivity'></span>.
+        You have successfully performed <span class='text-success' data-bind='text:lastPerformedActivity'></span>,
+        earning <span class='badge badge-success' data-bind='text: lastPerformedActivityPoints'></span> green points for
+        your group.
         </p>
     </div>
-    <div class='modal-fotter'>
+    <div class='modal-footer'>
         <button class='btn' data-dismiss='modal' aria-hidden='true'>Continue</button>
     </div>
 </div>
@@ -213,7 +241,13 @@ $(function() {
     function LighterFootprintsModel(modelJson) {
         var self = this;
         var model = ko.mapping.fromJS(modelJson);
-        model.lastPerformedActivity = ko.observable('None');
+        console.debug("model activities by level");
+        console.debug(model.activitiesByLevel());
+        // FIXME: hacky, figure out if there is a way to pass the observable in directly from the model object we get in
+        // performActivity
+        model.lastPerformedActivity = ko.observable();
+        model.lastPerformedActivityPoints = ko.observable();
+        model.errorMessage = ko.observable();
         model.hasChatMessages = function() {
             return model.chatMessages().length > 0;
         }
@@ -231,6 +265,34 @@ $(function() {
             console.log(availables);
             return availables;
         });
+        model.hasAvailableActivities = ko.computed(function() {
+            return model.availableActivities().length > 0;
+        });
+        model.performActivity = function(activityModel) {
+            if (! activityModel.available_now()) {
+                console.debug("trying to perform unavailable activity");
+                console.debug(activityModel);
+                model.errorMessage("The activity " + activityModel.display_name() + " is not currently available.");
+                $('#activityUnavailableModal').modal();
+                return;
+            }
+            var activityId = activityModel.pk();
+            var formData = $('#activityform' + activityId).serialize();
+            $.post('/lighterprints/api/do-activity', formData, function(data) {
+                console.log(data);
+                if (data.success) {
+                    ko.mapping.fromJSON(data.viewModel, model);
+                    console.debug("successfully performed activity");
+                    model.lastPerformedActivity(activityModel.display_name());
+                    model.lastPerformedActivityPoints(activityModel.points());
+                    $('#activityPerformedModal').modal();
+                }
+                else {
+                    model.errorMessage("Unable to perform activity: " + data.message);
+                    $('#activityUnavailableModal').modal();
+                }
+            });
+        };
         return model;
     }
     // set up KO binding, using one master view model
@@ -239,26 +301,6 @@ $(function() {
     var viewModel = new LighterFootprintsModel(viewModelData);
     console.log(viewModel);
     ko.applyBindings(viewModel);
-    // set up perform activity click handlers on any activity-actions that aren't disabled
-    // FIXME: a lot of this DOM manipulation could be cleaned up using KO, refactor after the pretest
-    $('#all-activities a.activity-action:not(.disabled)').click(function(evt) {
-        var activityId = $(this).attr("data-activity-id");
-        var formData = $('#activityform' + activityId).serialize();
-        var self = $(this);
-        $.post('/lighterprints/api/do-activity', formData, function(data) {
-            console.log(data);
-            if (data.success) {
-                self.addClass('disabled').off('click');
-                $('#activity-available-sign-' + activityId).remove();
-                viewModel.lastPerformedActivity(data.display_name);
-                $('#activityPerformedModal').modal();
-            }
-            else {
-                alert("unable to perform activity: " + data.message);
-            }
-        });
-    });
-
 });
 </script>
 {% endblock %}
