--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -64,15 +64,17 @@
             In order to advance in level and unlock more activities the <strong>average number of points contributed by each member of your
             group</strong> must be equal to or greater than <span data-bind='text: pointsToNextLevel' class='badge badge-info'>{{points_to_next_level}}</span>.  In order to reach this target <span class='text-warning'>you and a
             majority of the members of your group</span> must perform high point activities when they are available.
-            <table class='table table-bordered'>
-                <thead><tr><th>Group</th><th>Level</th><th>Points needed to reach the next level</th><th>Average number of points</th><th>Total points</th></tr></thead>
+            <table class='table table-bordered table-striped'>
+                <caption>Group Score Summary</caption>
+                <thead><tr><th>Group</th><th>Level</th><th>Total points</th><th>Size of group</th><th>Group average points</th><th>Group average points needed to reach the next level</th></tr></thead>
                 <tbody data-bind='foreach: groupData'>
                 <tr>
                     <td data-bind='text: group'></td>
                     <td data-bind='text: groupLevel'></td>
-                    <td data-bind='text: pointsToNextLevel'></td>
-                    <td data-bind='text: averagePoints'></td>
                     <td data-bind='text: totalPoints'></td>
+                    <td data-bind='text: groupSize'></td>
+                    <td data-bind='text: averagePoints'></td>
+                    <td class='text-success' data-bind='text: pointsToNextLevel'></td>
                 </tr>
                 </tbody>
             </table>
@@ -277,7 +279,7 @@ $(function() {
     </div>
     <div data-bind='css: { in: available_now() }, attr: {id: "activity" + $parent.parentId + pk()}' class='accordion-body collapse'>
         <div class='accordion-inner'>
-            <table class='table table-condensed table-bordered table-striped'>
+            <table class='table table-condensed table-bordered table-hover'>
                 <thead><tr><th>Summary</th><th>Availability</th><th>Points</th></tr></thead>
                 <tbody>
                     <tr><td data-bind='text: summary'></td><td><span data-bind='text: time_slots' class='text-info'></span></td><td><span data-bind='text: points' class='badge badge-success'></span></td></tr>
